[project]
name = "pdf-to-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyMuPDF",
    "PyQt6"
]

[project.scripts]
pdf2image-qt = "pdf_to_image.qt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_to_image"]